samples/_failures_safe/1761797005_5af061_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b217792b.c: In function ‘main’:
./samples/SAFE/__tmp_b217792b.c:126:12: error: missing terminating " character
  126 |     printf("Transformed vector: (%.3f,
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b217792b.c:126:5: error: expected expression at end of input
  126 |     printf("Transformed vector: (%.3f,
      |     ^~~~~~
./samples/SAFE/__tmp_b217792b.c:126:5: error: expected declaration or statement at end of input
